--- a/ios/ramdam_photos/Info.plist
+++ b/ios/ramdam_photos/Info.plist
@@ -56,6 +56,7 @@
 		<string>Nunito-Medium.ttf</string>
 		<string>Nunito-Regular.ttf</string>
 		<string>Nunito-SemiBold.ttf</string>
+		<string>Octicons.ttf</string>
 	</array>
 </dict>
 </plist>
