--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.76.0",
     "react-native-asset": "^2.1.1",
     "react-native-safe-area-context": "^4.12.0",
+    "react-native-vector-icons": "^10.2.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@react-native/metro-config": "0.76.0",
     "@react-native/typescript-config": "0.76.0",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
