--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^21.5.0",
+    "@react-native-firebase/firestore": "^21.5.0",
+    "@react-navigation/native": "^7.0.3",
+    "@react-navigation/native-stack": "^7.0.4",
     "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.76.0",
     "react-native-asset": "^2.1.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.2.0",
     "react-native-vector-icons": "^10.2.0",
     "styled-components": "^6.1.13"
   },
